hphp/hack/test/typecheck/array/disallow_value_inputs_for_darray.php.exp
File "disallow_value_inputs_for_darray.php", line 4, characters 11-10:
An arrow ('=>') is expected here. (Parsing[1002])
